--- a/frontend/src/app/pages/sign-in/sign-in.component.html
+++ b/frontend/src/app/pages/sign-in/sign-in.component.html
@@ -1,55 +1,84 @@
 @if (error) {
-    <div class="container fixed-top mt-2">
-      <div class="row justify-content-center">
-        <div class="col-md-6">
-            <ngb-alert #selfClosingAlert class=" text-center" type="danger" (closed)="error = ''">{{ error }}</ngb-alert>
-        </div>
-      </div>
-    </div>
-  }
-  
-  <section class="vh-100" style="background-color: #5f6268;">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card shadow-2-strong" style="border-radius: 1rem;">
-          <div class="card-body p-5">
-            <h3 class="text-center">Sign in</h3>
-            <hr class="mb-4">
-            <form id="loginForm" (ngSubmit)="onSubmit()" [formGroup]="loginForm">
-              <div data-mdb-input-init class="form-outline mb-4">
-                <label class="form-label" for="email">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email" formControlName="email" required>
-                <div *ngIf="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)"
-                  class="text-danger">
-                  <div *ngIf="loginForm.get('email')?.hasError('required')">
-                    Email is required.
-                  </div>
-                  <div *ngIf="loginForm.get('email')?.hasError('email')">
-                    Invalid email address.
-                  </div>
-                </div>
-              </div>
-              <div data-mdb-input-init class="form-outline mb-4">
-                <label class="form-label" for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Password" formControlName="password" required>
-                <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)"
-                  class="text-danger">
-                  <div *ngIf="loginForm.get('password')?.hasError('required')">
-                    Password is required.
-                  </div>
-                  <div *ngIf="loginForm.get('password')?.hasError('minlength')">
-                    Password must be at least 8 characters long.
-                  </div>
-                </div>
-              </div>
-              <div class="text-center">
-                <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-secondary btn-lg btn-block " id="submitButton">Submit</button>
-              </div>
-            </form>
-          </div>
-        </div>
+  <div class="container fixed-top mt-2">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+	      <ngb-alert #selfClosingAlert class=" text-center" type="danger" (closed)="error = ''">{{ error }}</ngb-alert>
       </div>
     </div>
   </div>
-  </section>
+}
+<div class="d-flex justify-content-center align-items-center vh-100 bg-light">
+  <div class="card shadow" style="width: 45rem;height:30em; border-radius: 10px;">
+    <div class=" text-center bg-transparent ">
+      <img
+        src="images/login4.jpg"
+        alt="Header"
+        class="img-fluid rounded-top"
+        style=" width: 45rem; object-fit: cover; filter: brightness(1.2)"
+      />
+      <h3 class="mt-2 text-uppercase" style="position: absolute; top: 20%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 35px;">
+        Sign In
+      </h3>
+    </div>
+    <div class="card-body">
+      <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" id="loginForm" class="d-flex flex-column justify-content-around align-items-center height h-100" >
+        <div style="width:600px">
+         <!-- Username Field -->
+          <div class="form-group  d-flex align-items-center justify-content-between">
+            <label for="username" class="form-label  text-end pe-4  " style="font-size: 17px; width: 150px; font-weight:500;">Username :</label>
+            <input
+              type="text"
+              id="email"
+              class="form-control"
+              placeholder="Enter username"
+              formControlName="email"
+              required
+              style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
+            />   
+          </div>
+          <div *ngIf="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)" class="text-danger mt-2" style="margin-left:123px " >
+            <div *ngIf="loginForm.get('email')?.hasError('required')" >
+              Email is required.
+            </div>
+            <div *ngIf="loginForm.get('email')?.hasError('email')">
+              Invalid email address.
+            </div>
+          </div>
+          <!-- Password Field -->
+          <div class="form-group mt-4 d-flex align-items-center justify-content-between">
+            <label for="password" class="form-label  text-end pe-4 " style="font-size: 17px; width: 150px;font-weight: 500">Password :</label>
+            <input
+              type="password"
+              id="password"
+              class="form-control"
+              placeholder="Enter password"
+              formControlName="password"
+              required
+              style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
+            />
+          </div>
+                 
+          <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched) "
+            class="text-danger mt-2" style=" margin-left:123px ">
+              <div *ngIf="loginForm.get('password')?.hasError('required')">
+                Password is required.
+              </div>
+              <div *ngIf="loginForm.get('password')?.hasError('minlength')">
+                Password must be at least 8 characters long.
+              </div>
+            </div>
+          </div>
+          <div class="d-flex justify-content-end align-items-end " style="width:600px">
+            <span class="me-2">Don't have an account?</span>
+            <a href="/signUp" class="text-decoration-none">Register Here</a>
+          </div>
+        <!-- Login Button -->
+        <div class="d-flex justify-content-center align-items-center">
+          <button type="submit" class="btn btn-success btn-lg" style="width: 10rem">
+            Login
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
