cancel reservation : ride-list

--- a/frontend/src/app/components/ride-list/ride-list.component.html
+++ b/frontend/src/app/components/ride-list/ride-list.component.html
@@ -53,6 +53,7 @@
                 <button
                   class="btn btn-danger"
                   *ngIf="hasReservation(ride)"
+                  (click)="cancelReservation(ride)"
                 >
                   Cancel Ride
                 </button>
