--- a/frontend/src/app/components/ride-list/ride-list.component.html
+++ b/frontend/src/app/components/ride-list/ride-list.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4 p-4">
-    <div *ngIf="isLoading">Loading rides...</div>
+    <div *ngIf="isLoading">Loading data...</div>
     <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
     <div *ngFor="let ride of rides" class="card mb-3">
       <div class="row g-0">
