profil full stack

--- a/frontend/src/app/components/reservation-history/reservation-history.component.html
+++ b/frontend/src/app/components/reservation-history/reservation-history.component.html
@@ -4,7 +4,7 @@
 	</div>
 </div>
 <ng-template #loaded>
-	<div class="container my-5">
+	<div class="container">
 		<div *ngIf="errorMessage" class="alert alert-danger my-3">{{ errorMessage }}</div>
 		<div 
 			*ngIf="isProcessing" 
