--- a/frontend/src/app/components/ride-list/ride-list.component.html
+++ b/frontend/src/app/components/ride-list/ride-list.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <ng-template #loaded>
-  <div class="container mt-4 p-4 d-flex flex-column align-items-center justify-content-center">
+  <div class="container d-flex flex-column align-items-center justify-content-center">
     
     <!-- Error message -->
     <div *ngIf="errorMessage" class="alert alert-danger my-3">{{ errorMessage }}</div>
