alert sand spinners on review

--- a/frontend/src/app/components/review/review.component.html
+++ b/frontend/src/app/components/review/review.component.html
@@ -1,10 +1,18 @@
 <div *ngIf="isModalVisible" class="modal fade show d-block" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
     <div class="modal-dialog" style="max-width: 45%;">  <!-- Réduire la largeur de la modal -->
+      <div 
+        *ngIf="isProcessing" 
+        class="position-absolute top-0 start-0 w-100 h-100 bg-light bg-opacity-75 d-flex justify-content-center align-items-center z-2">
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden">Processing...</span>
+        </div>
+      </div>
       <div class="modal-content ">
         <div class="modal-header" style="height: 40px;">
           <h5 class="modal-title" style="font-size: 18px;">Review Ride</h5> <!-- Diminuer la taille du titre -->
           <button type="button" class="btn-close" aria-label="Close" (click)="closeModal()"></button>
         </div>
+		    <div *ngIf="errorMessage" class="alert alert-danger my-3">{{ errorMessage }}</div>
         <div class="modal-body" style="padding: 15px;" *ngIf="!isDriver">
           <!-- Affichage du message de trajet avec les détails et le nom du conducteur -->
           <div class="ride-message" style="font-size: 14px;"  >
