--- a/frontend/src/app/pages/add-ride/add-ride.component.html
+++ b/frontend/src/app/pages/add-ride/add-ride.component.html
@@ -1,6 +1,14 @@
 <div class="">
   <app-navbar></app-navbar>
   <div class="container-fluid  d-flex justify-content-center">
+    <div *ngIf="errorMessage" class="alert alert-danger my-3">{{ errorMessage }}</div>
+		<div 
+			*ngIf="isProcessing" 
+			class="position-absolute top-0 start-0 w-100 h-100 bg-light bg-opacity-75 d-flex justify-content-center align-items-center z-2">
+			<div class="spinner-border text-primary" role="status">
+				<span class="visually-hidden">Processing...</span>
+			</div>
+		</div>
       <div class="row justify-content-center align-items-center w-100">
         <div class="col-md-10">
           <div class="card shadow">
