--- a/frontend/src/app/components/filter-form/filter-form.component.html
+++ b/frontend/src/app/components/filter-form/filter-form.component.html
@@ -1,4 +1,11 @@
-<div class="w-100 col-md-2 mt-3">
+<div class="w-auto col-md-2 mt-3">
+    <div 
+			*ngIf="isProcessing" 
+			class="position-absolute top-0 start-0 w-100 h-100 bg-light bg-opacity-75 d-flex justify-content-center align-items-center z-2">
+			<div class="spinner-border text-primary" role="status">
+				<span class="visually-hidden">Processing...</span>
+			</div>
+		</div>
     <div class="card">
       <div class="card-header text-center">
         <h4>Filter Rides</h4>
